[강남규] 비밀번호 sha256으로 암호화 작업중 저장은 성공 로그인 해결해야함

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -83,7 +83,7 @@ a:hover{
 }
 
 
-.input-form input[type=text]{
+.input-form input[type=text], .input-form input[type=password]{
 	height:45px;
 	border-radius: 8px;
 	padding:0 8px;
