[강남규] 영화정보저장기능 구현완료 상영관 페이지 제작 시작 #3

--- a/src/main/resources/static/css/admin_style.css
+++ b/src/main/resources/static/css/admin_style.css
@@ -5,7 +5,8 @@
 	margin:0 auto;
 	height: 700px;
 }
-
+a{ color:#000; }
+a:hover{ text-decoration: none; color:#000; }
 .content > .input-box {
 	width:400px;
 }
