--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,14 +1,17 @@
 @charset "UTF-8";
 
-ul{list-style: none; padding:0;}
+ul{list-style: none; padding:0; margin:0;}
 a:hover{
 	cursor: pointer;
 }
 
 #header-section{
-	position:relative;
-	height: 144px;
-	
+	position:absolute;
+	width:100%;
+	z-index: 2;	
+}
+.main-header{
+	color:#fff;	
 }
 #logo{
 	position: absolute;
@@ -19,17 +22,25 @@ a:hover{
 
 #header-section .gnb{
 	width:980px;
+	margin:0 auto;
 	height:90px;
 	display:flex;
 	justify-content: end;
 	padding:40px 16px 0 0;
-	margin:0 auto;
 	border-bottom: 1px solid #ddd;
 }
 #nav{
+	text-align:center;
 	width:980px;
 	margin:0 auto;
-	text-align:center;
+}
+#nav.fixed{
+	position: fixed;
+	width:100%;
+	top: 0;
+	z-index: 9999;
+	background-color: #fff;
+	color:#000;
 }
 #nav ul {
 	display: flex;
@@ -115,4 +126,35 @@ a:hover{
 	height:40px;
 	border:none;
 	border-radius: 8px;
+}
+
+.bottom-info{ margin-top: 20px; }
+
+.item-wrap{ position: relative; }
+.item-wrap .top-info{
+	position: relative;
+}
+.item-wrap .top-info .over-box{
+	position: absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height: 100%;
+	z-index: 1;
+}
+.item-wrap .over-box .inner{
+	position: absolute;
+	z-index: 1;
+	top: 50%;
+	padding:0 12px;
+	transform: translateY(-50%);
+}
+.item-wrap .over-box .inner a{ 
+	display: block;
+	color: #fff;
+}
+
+.btn-thumb{
+	padding:0 14px;
+	border:1px solid #fff;
 }
