--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,17 +1,25 @@
 @charset "UTF-8";
 
 ul{list-style: none; padding:0; margin:0;}
-a:hover{
+a:hover , a{
 	cursor: pointer;
+	text-decoration: none;
+}
+#header-section{
+	
+}
+.normal-header a{
+	color:#000;
 }
 
-#header-section{
+.main-header{
+	color:#fff;	
 	position:absolute;
 	width:100%;
 	z-index: 2;	
 }
-.main-header{
-	color:#fff;	
+.main-header a{
+	color:#fff;
 }
 #logo{
 	position: absolute;
@@ -40,6 +48,9 @@ a:hover{
 	top: 0;
 	z-index: 9999;
 	background-color: #fff;
+	
+}
+#nav.fixed a{
 	color:#000;
 }
 #nav ul {
@@ -128,7 +139,7 @@ a:hover{
 	border-radius: 8px;
 }
 
-.bottom-info{ margin-top: 20px; }
+.bottom-info{ margin: 10px 0; }
 
 .item-wrap{ position: relative; }
 .item-wrap .top-info{
@@ -148,13 +159,60 @@ a:hover{
 	top: 50%;
 	padding:0 12px;
 	transform: translateY(-50%);
+	width:100%;
 }
 .item-wrap .over-box .inner a{ 
+	display: none;
+	color: #fff;
+}
+.item-wrap:hover .over-box:before{
+	display: block;
+	content:"";
+	width:100%;
+	height:100%;
+	background-color: #000;
+	opacity: 0.7;
+}
+
+.item-wrap:hover .over-box .inner a{ 
 	display: block;
 	color: #fff;
 }
 
+
 .btn-thumb{
 	padding:0 14px;
 	border:1px solid #fff;
+	border-radius: 4px;
 }
+
+.btn-thumb + .btn-thumb{
+	margin-top:10px;
+}
+
+.bottom-info strong{
+	font-size:16px;
+	display: block;
+}
+.thumb-wrap .info-wrap{
+	width:980px;
+	margin:0 auto;
+}
+
+.info-thumb{
+	display:flex;
+	justify-content: space-between;
+}
+.info-thumb .item-wrap{
+	width:184px;
+	text-align: center;
+}
+.info-thumb .item-wrap .top-info img{
+	width:100%;
+}
+
+
+.info-part + .info-part{ 
+	margin-top:40px;
+}
+
