--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -5,9 +5,6 @@ a:hover , a{
 	cursor: pointer;
 	text-decoration: none;
 }
-#header-section{
-	
-}
 .normal-header a{
 	color:#000;
 }
@@ -191,7 +188,7 @@ a:hover , a{
 }
 
 .bottom-info strong{
-	font-size:16px;
+	font-size:13px;
 	display: block;
 }
 .thumb-wrap .info-wrap{
@@ -215,4 +212,11 @@ a:hover , a{
 .info-part + .info-part{ 
 	margin-top:40px;
 }
+.thumb-wrap.main{
+	background-color: #000;
+}
 
+#thumbSwiper .swiper-slide{
+	background-color: #000;
+	color:#fff;
+}
