--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -336,3 +336,39 @@ a:hover , a{
 .detail-bottom{
 	margin-top: 50px;
 }
+
+
+.ticket-wrap{
+	width:100%;
+	background-color: #444;
+	padding: 50px 0;
+}
+.ticket-box{
+	margin:0 auto;
+	width:980px;
+	height:600px;
+	background-color: #fff;
+	display:flex;
+	text-align: center;
+}
+.process-wrap li{
+	width:78px;
+	height:150px;
+	display: flex;
+	vertical-align: middle;
+}
+.select-movie{
+	width:100%;
+}
+.ticket-info{
+	display:flex;
+}
+.ticket-info>div{
+	width:100%;
+}
+.movie-select{
+	display: flex;
+}
+.movie-select>div{
+	width:100%;
+}
