--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -347,6 +347,7 @@ a:hover , a{
 	padding: 50px 0;
 }
 .ticket-box{
+	position: relative;
 	margin:0 auto;
 	width:980px;
 	height:600px;
@@ -436,6 +437,29 @@ a:hover , a{
 	height: 30px;
 	line-height: 30px;
 }
+.movie-id>div>label{
+	display: block;
+	cursor: pointer;
+	width:100%;
+	height:45px;
+	padding: 0;
+} 
+.movie-id>div>label input[type="radio"]{
+	overflow: hidden;
+	position: absolute;
+	width:1px;
+	height: 1px;
+    clip: rect(0, 0, 0, 0);
+}
+.movie-id>div>label input[type="radio"] + span{
+	display: block; 
+	width: 100%;
+	height: 45px;
+	line-height: 45px;
+}
+.movie-id>div>label input[type="radio"]:checked + span{
+	border:2px solid #000;
+}
 .date-pick ul{
 	display: flex;
 }
@@ -467,4 +491,30 @@ a:hover , a{
 .date-pick .date label em{
 	display: block;
 	height: 20px;
+	font-size: 14px;
+	margin-top: 8px;
+}
+
+.ticket-box>div .btn-wrap{
+	position: absolute;
+	bottom: 0;
+	width:902px;
+}
+
+.ticket-box>div .btn-wrap .btn-box{
+	display: flex;
+	justify-content: flex-end;
+	padding: 30px;
+}
+.ticket-box>div .btn-wrap .btn-box button{
+	background-color: #444;
+	color: #fff;
+	border: 1px solid #444;
+	border-radius: 4px;
+	height: 48px;
+	padding: 0 12px; 
+	cursor: pointer;
+}
+.review-top{
+	display: flex;
 }
